Titel ist absichtlich hier definiert

--- a/code/index.html
+++ b/code/index.html
@@ -1,8 +1,9 @@
 <html>
-	<head><title>Learning Git</title>
+	<head>
+	<title>Learning Git</title>
 	</head>
 	<body> 
-		<img src="../image/ski1.jpg">
+		<img src="../image/Ski1.jpg">
 		<img src="../image/sun1.jpg">
 		<img src="../image/mount1.jpg">
 	</body>
