Pfad änderung im html

--- a/code/index.html
+++ b/code/index.html
@@ -3,8 +3,8 @@
 	<title>Learning Git</title>
 	</head>
 	<body> 
-		<img src="../image/Ski1.jpg">
-		<img src="../image/sun1.jpg">
-		<img src="../image/mount1.jpg">
+		
+		<img src="/image/sun1.jpg">
+		<img src="/image/mount1.jpg">
 	</body>
 </html>
