--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body> 
 		
-		<img src="/image/sun1.jpg">
-		<img src="/image/mount1.jpg">
+		<img src="image/sun1.jpg">
+		<img src="image/mount1.jpg">
 	</body>
 </html>
