--- a/code/index.html
+++ b/code/index.html
@@ -1,7 +1,9 @@
 <html>
 	<head>
 	<title>Learning Git: Diffs</title>
+	<script src="index.js"></script>
 	</head>
+
 	<body> 
 		
 		<img src="image/sun1.jpg">
